infra/gke/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: happy-soup
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: LoadBalancer
